Destiny One - Fix PLP

--- a/destiny4.0/one/plp/index.html
+++ b/destiny4.0/one/plp/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=ba5c1c048b1e03c213a893ff4db6c448" rel="stylesheet">
-<link href="css/styles.css?v=ba4a6b9d9d5f999a355e40b95ff800f4" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=9a0f489aca288b17c50f9547155c8aaa" rel="stylesheet">
+<link href="css/styles.css?v=18769742ff3107726aca924b0193b61d" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp" style="visibility: hidden;opacity: 0">
     <!-- Section BANNER -->
     <!-- banner -->
@@ -8,8 +8,8 @@
         <div class="ws10-o-layout ws10-u--pb0 ws10-u--pt6x">
           <div class="ws10-o-layout__item ws10-u--1/2@desktop">
             <h2 class="ws10-u-heading--4">Fibra + Móvil</h2>
-            <p class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner">
-              <span>Ahora <strong>2 líneas ilimitadas</strong>,<br> fibra óptica y TV al <strong>50%<br> dto. 3 meses</strong>
+            <p class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner ws10-u--pr16x">
+              <span>Ahora <strong>2 líneas ilimitadas</strong>, fibra óptica y TV al <strong>50% dto. 3 meses</strong>
               </span>
             </p>
           </div>
@@ -103,7 +103,7 @@
                                                     <del>56,99€/mes</del>
                                                 </p>
                                                 <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                    28,49€/<sub>mes</sub>
+                                                    28,49€<sub>/mes</sub>
                                                 </p>
                                             </div>
                                         </div>
@@ -189,7 +189,7 @@
                                                     <del>69,99€/mes</del>
                                                 </p>
                                                 <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                    34,99€/<sub>mes</sub>
+                                                    34,99€<sub>/mes</sub>
                                                 </p>
                                             </div>
                                         </div>
@@ -278,7 +278,7 @@
                                                     <del>89,99€/mes</del>
                                                 </p>
                                                 <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                    44,99€/<sub>mes</sub>
+                                                    44,99€<sub>/mes</sub>
                                                 </p>
                                             </div>
                                         </div>
@@ -446,4 +446,4 @@
     </div>
 </div>
 <script src="js/ws10.js?v=87a5cdccb0beeab7883be40ee6f35ec1"></script>
-<script src="js/main.js?v=461243d5e6f21d20f8f2e454f631761d"></script>
+<script src="js/main.js?v=c96532babfa3e0267f20114eb78003d7"></script>
