--- a/destiny4.0/Norte/ilimitada_avanzada_300/index.html
+++ b/destiny4.0/Norte/ilimitada_avanzada_300/index.html
@@ -176,7 +176,7 @@ utag_data.plans_add2cart = [
                                                       <del>56,99€/mes</del>
                                                   </p>
                                                   <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                      28,49€/<sub>mes</sub>
+                                                      28,49€<sub>/mes</sub>
                                                   </p>
                                               </div>
                                           </div>
@@ -213,7 +213,7 @@ utag_data.plans_add2cart = [
                                                       <del>56,99€/mes</del>
                                                   </p>
                                                   <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                      28,49€/<sub>mes</sub>
+                                                      28,49€<sub>/mes</sub>
                                                   </p>
                                               </div>
                                           </div>
@@ -456,7 +456,7 @@ utag_data.plans_add2cart = [
                     </p>
                   </li>  </ul>
                   <p class="ws10-u--pt4x wfms__legal">
-                    (*)Podrás añadir más Líneas adicionales en el proceso de compra.
+                    (*) Podrás añadir más Líneas adicionales en el proceso de compra.
                   </p>
                 
                 </section>
@@ -810,7 +810,7 @@ utag_data.plans_add2cart = [
                                      </div>
                                  </div>
                                  </li>        </ul>
-                         <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*)Todos los servicios podrás gestionarlos en la App Mi Vodafone</span>
+                         <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*) Todos los servicios podrás gestionarlos en la App Mi Vodafone</span>
                      </div>
                  </section>
                 <!-- SIN SORPRESAS -->
@@ -843,7 +843,7 @@ utag_data.plans_add2cart = [
                        >
                            Los primeros 6 meses</span>
                        <span
-                         class="ws10-c-price-bar__hr ws10-c-price-bar__hr--start ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
+                         class="ws10-c-price-bar__hr ws10-c-price-bar__hr--start ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
                        ></span>
                        <div
                          class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -867,7 +867,7 @@ utag_data.plans_add2cart = [
                          Del mes 7 al 12
                        </span>
                        <span
-                         class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
+                         class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
                        ></span>
                        <div
                          class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -882,7 +882,7 @@ utag_data.plans_add2cart = [
                          A partir del mes 7
                        </span>
                        <span
-                         class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
+                         class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
                        ></span>
                        <div
                          class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -896,7 +896,7 @@ utag_data.plans_add2cart = [
                        <span
                          class="ws10-c-price-bar__text ws10-u--mb4x">  A partir del año</span>
                        <span
-                         class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-fresh-orange"
+                         class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-black"
                        ></span>
                        <div
                          class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
