--- a/destiny4.0/Norte/ilimitada_avanzada_600/index.html
+++ b/destiny4.0/Norte/ilimitada_avanzada_600/index.html
@@ -884,11 +884,12 @@ utag_data.plans_add2cart = [
               <span><strong>No escondemos nada</strong></span>
             </p>
             <p>Impuestos y cuota de línea incluidos</p>
-            <p><strong>Permanencia 6 meses</strong></p>
+            <p data-js-vf="_portability"><strong>Permanencia 6 meses</strong></p>
+            <p class="ws10-u--hidden" data-js-vf="_newNumber"><strong>Permanencia 1 año</strong></p>
               <p>¿Cuánto voy a pagar?</p>
             <p><strong>Paquete Fibra + Móvil: 34,99€/mes durante 6 meses, después 69,99€/mes</strong></p>
             <p class="ws10-flex ws10-flex__direction--column">
-               <span>Otras promociones:</span><span>Llévate el paquete de Fibra + Móvil al 50% dto. 6 meses</span></span><span data-js-vf='_portability'>Línea adicional: GRATIS durante 1 año, después con un 50% dto. por solo 17,50€/mes (dto. ya aplicado).</span><span>Paquete de TV: GRATIS GRATIS durante 1 año, después 10€/mes</span>
+               <span>Otras promociones:</span><span>Llévate el paquete de Fibra + Móvil al 50% dto. 6 meses</span><span data-js-vf='_portability'>Línea adicional: GRATIS durante 1 año, después con un 50% dto. por solo 17,50€/mes (dto. ya aplicado).</span><span>Paquete de TV: GRATIS GRATIS durante 1 año, después 10€/mes</span>
             </p>
             <!----PRICE-TAB-->
           <div class="ws10-c-price-bar-group ws10-u--mt4x ws10-u--mb4x">
@@ -904,7 +905,7 @@ utag_data.plans_add2cart = [
                 >
                     Los primeros 6 meses</span>
                 <span
-                  class="ws10-c-price-bar__hr ws10-c-price-bar__hr--start ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
+                  class="ws10-c-price-bar__hr ws10-c-price-bar__hr--start ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
                 ></span>
                 <div
                   class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -928,7 +929,7 @@ utag_data.plans_add2cart = [
                   Del mes 7 al 12
                 </span>
                 <span
-                  class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
+                  class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
                 ></span>
                 <div
                   class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -943,7 +944,7 @@ utag_data.plans_add2cart = [
                   A partir del mes 7 al 12
                 </span>
                 <span
-                  class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
+                  class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
                 ></span>
                 <div
                   class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -963,7 +964,7 @@ utag_data.plans_add2cart = [
                   data-js-vf="_newNumber"
                   >  A partir del año</span>
                 <span
-                  class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-fresh-orange"
+                  class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-black"
                 ></span>
                 <div
                   data-js-vf="_portability"
