Destiny Norte y Colectivos - Change image hero

--- a/destiny4.0/Norte/plp/index.html
+++ b/destiny4.0/Norte/plp/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=bd0de2ede04eeb05c342842f82cc5620" rel="stylesheet">
-<link href="css/styles.css?v=793653a51dd337c1178c061925f3eb53" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=b9dd7aa7bf833810e3cbaf95eb093ca0" rel="stylesheet">
+<link href="css/styles.css?v=73be2141b8b3d3c97bf34a9cb954602f" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp" style="visibility: hidden;opacity: 0">
     <!-- Section BANNER -->
     <!-- banner -->
@@ -15,10 +15,10 @@
           </div>
           <div class="ws10-o-layout__item ws10-u--1/2@desktop">
             <picture>
-              <source media="(min-width:768px)" srcset="img/bodegon-desktop.webp?v=ea8b683458d41ef7d35f67e1a3b36a0f" type="image/webp">
-              <source media="(min-width:768px)" srcset="img/bodegon-desktop.png?v=98827bbadd6919914ddecc187b2abbff" type="image/png">
+              <source media="(min-width:768px)" srcset="img/bodegon-desktop.webp?v=508bad9f4e5f017189be57dcf17a6e25" type="image/webp">
+              <source media="(min-width:768px)" srcset="img/bodegon-desktop.png?v=4aba41eadf20b39b68353bd211e1a256" type="image/png">
               <source srcset="img/bodegon-mobile.webp?v=5c4d3c2ae377a045d3decaaa4c8e7b6b" type="image/webp">
-              <img src="img/bodegon-desktop.png?v=98827bbadd6919914ddecc187b2abbff">
+              <img src="img/bodegon-desktop.png?v=4aba41eadf20b39b68353bd211e1a256">
             </picture>
           </div>
         </div>
@@ -103,7 +103,7 @@
                                                     <del>56,99€/mes</del>
                                                 </p>
                                                 <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                    28,49€/<sub>mes</sub>
+                                                    28,49€<sub>/mes</sub>
                                                 </p>
                                             </div>
                                         </div>
@@ -189,7 +189,7 @@
                                                     <del>69,99€/mes</del>
                                                 </p>
                                                 <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                    34,49€/<sub>mes</sub>
+                                                    34,49€<sub>/mes</sub>
                                                 </p>
                                             </div>
                                         </div>
@@ -278,7 +278,7 @@
                                                     <del>89,99€/mes</del>
                                                 </p>
                                                 <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                    44,99€/<sub>mes</sub>
+                                                    44,99€<sub>/mes</sub>
                                                 </p>
                                             </div>
                                         </div>
@@ -358,4 +358,4 @@
     </div>
 </div>
 <script src="js/ws10.js?v=87a5cdccb0beeab7883be40ee6f35ec1"></script>
-<script src="js/main.js?v=ecff07b6e26f77ab26843557a28b71dc"></script>
+<script src="js/main.js?v=8db6c9faa50970a12bfb183a04e5b890"></script>
