--- a/destiny4.0/colectivos/plp/index.html
+++ b/destiny4.0/colectivos/plp/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=f59baf2594484e20ead0120426aa99b3" rel="stylesheet">
-<link href="css/styles.css?v=2ec6313dcd931109ed3bccdf1b44ef43" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=69c9d092fa78ef59087c8bb2cb222622" rel="stylesheet">
+<link href="css/styles.css?v=63f5887003b29b41fcf2c9eec375ee95" rel="stylesheet" data-ws10-microcss="">
 
 <div class="vfes-ms-content">
 	<div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp-rates">
@@ -128,7 +128,7 @@
 		                                                                    Permanencia 1 año
 		                                                                </p>
 		                                                                <p class="ws10-c-card-rate__price ws10-u-color--black">
-		                                                                    28,49€/<sub>mes</sub>
+		                                                                    28,49€<sub>/mes</sub>
 		                                                                </p>
 		                                                            </div>
 		                                                        </div>
@@ -213,7 +213,7 @@
 		                                                                    Permanencia 1 año
 		                                                                </p>
 		                                                                <p class="ws10-c-card-rate__price ws10-u-color--black">
-		                                                                    34,99€/<sub>mes</sub>
+		                                                                    34,99€<sub>/mes</sub>
 		                                                                </p>
 		                                                            </div>
 		                                                        </div>
@@ -301,7 +301,7 @@
 		                                                                    Permanencia 1 año
 		                                                                </p>
 		                                                                <p class="ws10-c-card-rate__price ws10-u-color--black">
-		                                                                    44,99€/<sub>mes</sub>
+		                                                                    44,99€<sub>/mes</sub>
 		                                                                </p>
 		                                                            </div>
 		                                                        </div>
@@ -1337,4 +1337,4 @@
 	</div></div>
 
 <script src="js/ws10.js?v=0c566a1fbbd8db5f4412c0e139a482ab"></script>
-<script src="js/main.js?v=ba907204a9475b8ac1731bf73e2a32d6"></script>
+<script src="js/main.js?v=281063593332f5a517066069da7ee124"></script>
