pelenaca: cambios plp masmovil + plp euskaltel

--- a/oferta/euskaltel/plp/index.html
+++ b/oferta/euskaltel/plp/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=a8f29865eb5f5a6f7f47d1fbd6c2fc2d" rel="stylesheet">
-<link href="css/styles.css?v=41a32dd75973f5644b82ad9e0a0b775b" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=790b24c8bf4d73a896a2e4e4410ba104" rel="stylesheet">
+<link href="css/styles.css?v=471022ded3c9f0d1c8b5c8db9132b6bc" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp-e" style="visibility: hidden;opacity: 0">
     <!-- BREADCRUMBS -->
     <!-- Section BANNER -->
@@ -459,7 +459,7 @@
                                                     Datos y minutos ilimitados GRATIS
                                                 </p>
                                                 <p class="ws10-c-card-rate__product-txt ">
-                                                    Segunda línea GRATIS 1 año
+                                                    Segunda línea con -17,50€/mes dto. durante 1 año
                                                 </p>
                                             </div>
                                         </li>
@@ -500,10 +500,10 @@
                                                     Permanencia 1 año
                                                 </p>
                                                 <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price">
-                                                    <del>92,49€/mes</del>
+                                                    <del>94,49€/mes</del>
                                                 </p>
                                                 <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                    49,49€<sub>/mes</sub>
+                                                    51,49€<sub>/mes</sub>
                                                 </p>
                                             </div>
                                         </div>
@@ -713,4 +713,4 @@
 
 </div>
 <script src="js/ws10.js?v=566ecc00e5c21622f0822c7e9d38f861"></script>
-<script src="js/main.js?v=781b4cfc70f64120ff940c562f9ba9c7"></script>
+<script src="js/main.js?v=900958a25ae68d7e1c9743960dd6a4d9"></script>
