Destiny - Fixes varios colectivos

--- a/destiny4.0/colectivos/ilimitada_avanzada_300/index.html
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/index.html
@@ -528,19 +528,19 @@ utag_data.plans_add2cart = [
           </p>
           <div class="ws10-c-logo-list ws10-c-logo-list--mini">
               <ul class="ws10-c-logo-list__list">
-                <li class="ws10-c-logo-list__item">
+                <li class="ws10-c-logo-list__item@desktop">
                   <picture>
                       <source class="" srcset="img/section-tv/amc-desktop.webp" type="image/webp" />
                       <source class="" srcset="img/section-tv/amc-desktop.png" type="image/png" />
                       <img class="" src="img/section-tv/amc-desktop.png" alt="logo amc" />
                   </picture>        </li>
-                <li class="ws10-c-logo-list__item">
+                <li class="ws10-c-logo-list__item@desktop">
                   <picture>
                       <source class="" srcset="img/section-tv/eurosport-desktop.webp" type="image/webp" />
                       <source class="" srcset="img/section-tv/eurosport-desktop.png" type="image/png" />
                       <img class="" src="img/section-tv/eurosport-desktop.png" alt="logo Eurosport" />
                   </picture>        </li>
-                <li class="ws10-c-logo-list__item">
+                <li class="ws10-c-logo-list__item@desktop">
                   <picture>
                       <source class="" srcset="img/section-tv/tcm-desktop.webp" type="image/webp" />
                       <source class="" srcset="img/section-tv/tcm-desktop.png" type="image/png" />
@@ -882,7 +882,7 @@ utag_data.plans_add2cart = [
             <picture>
                 <source class="ws10-u--1/1" srcset="img/section-deco/contenido-tv.webp" type="image/webp" />
                 <source class="ws10-u--1/1" srcset="img/section-deco/contenido-tv.png" type="image/png" />
-                <img class="" src="img/section-deco/contenido-tv.png" alt="interfaz de tv Vodafone, sin decodificador" />
+                <img class="ws10-u--1/1" src="img/section-deco/contenido-tv.png" alt="interfaz de tv Vodafone, sin decodificador" />
             </picture>    <p>Vodafone TV con <strong>calidad HD en tu Smart TV (a través de la App Vodafone TV) y en tus dispositivos como móvil, tablet, PC, Fire TV Stick y Chromecast</strong> para disfrutar de una experiencia online. Consultar dispositivos compatibles.</p>
             <div class="ws10-c-logo-list ws10-c-logo-list--mini">
                 <p class="ws10-c-logo-list__w-show-all">
@@ -1495,11 +1495,8 @@ utag_data.plans_add2cart = [
           <div
             class="ws10-c-card-rate-sticky__offer ws10-flex ws10-flex__direction--column"
           >
-            <del class="ws10-c-card-rate-sticky__dto-price">54,99€/mes</del>
             <span class="ws10-c-card-rate-sticky__final-price">
-              <span
-                class="ws10-c-card-rate-sticky__final-price-value"
-              >28,49€</span>
+              <span class="ws10-c-card-rate-sticky__final-price-value">28,49€</span>
               <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
             </span>
           </div>
@@ -1507,14 +1504,14 @@ utag_data.plans_add2cart = [
             data-cta="300:port:card"
             type="submit"
             class="ws10-c-button ws10-c-button--auto"
-            href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=&tcli=0&tta=2"
+            href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id&#x3D;1285850&amp;tcli&#x3D;0&amp;tta&#x3D;1"
             onmousedown="addtocart(utag_data.plans_add2cart[0])"
             data-analytics-element="stiky inferior"
-            data-analytics-context=""
-            data-analytics-category=""
-            data-analytics-id=""
+            data-analytics-context="lo quiero"
+            data-analytics-category="cta"
+            data-analytics-id="-4725602956266"
           >
-            
+            Lo quiero
             <span class="ws10-u--hidden-visually" data-cta-a11y></span>
           </a>
         </div>
@@ -1525,32 +1522,30 @@ utag_data.plans_add2cart = [
           <div
             class="ws10-c-card-rate-sticky__offer ws10-flex ws10-flex__direction--column"
           >
-            <del class="ws10-c-card-rate-sticky__dto-price">54,99€/mes</del>
             <span class="ws10-c-card-rate-sticky__final-price">
-              <span
-                class="ws10-c-card-rate-sticky__final-price-value"
-              >28,49€</span>
+              <span class="ws10-c-card-rate-sticky__final-price-value">28,49€</span>
               <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
             </span>
           </div>
           <a
-            data-cta="300:port:card"
-            type="submit"
-            class="ws10-c-button ws10-c-button--auto"
-            href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=&tcli=0&tta=2"
-            onmousedown="addtocart(utag_data.plans_add2cart[1])"
-            data-analytics-element="stiky inferior"
-            data-analytics-context=""
-            data-analytics-category=""
-            data-analytics-id=""
+          data-cta="300:port:card"
+          type="submit"
+          class="ws10-c-button ws10-c-button--auto"
+          href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id&#x3D;1285867&amp;tcli&#x3D;0&amp;tta&#x3D;1"
+          onmousedown="addtocart(utag_data.plans_add2cart[1])"
+          data-analytics-element="stiky inferior"
+          data-analytics-context="lo quiero"
+          data-analytics-category="cta"
+          data-analytics-id="-4725875100583"
           >
-            
+            Lo quiero
             <span class="ws10-u--hidden-visually" data-cta-a11y></span>
           </a>
         </div>
       </div>
     </div>
-  </section>  <!-- TERMINALES-->
+  </section>
+  <!-- TERMINALES-->
   <div
     class="ws10-c-backdrop js-backdrop"
     data-ws10-js="backdrop"
