WIP tarifa 1 euskaltel

--- a/oferta/masmovil/tarifa-2/index.html
+++ b/oferta/masmovil/tarifa-2/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css" rel="stylesheet"  />
-<link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
+<link href="css/ws10.css?v=001d045f64af2b1c9b04fed4f4e411e3" rel="stylesheet">
+<link href="css/styles.css?v=a29cd571e07516db9ce6dbc4a8669bd7" rel="stylesheet" data-ws10-microcss="">
 <script>
     utag_data.default_plan = "vodafone one ilimitada"
     utag_data.plans_list = [{
@@ -415,5 +415,5 @@
         </div>
     </section>
 </div>
-<script src="js/ws10.js"></script>
-<script src="js/main.js"></script>
+<script src="js/ws10.js?v=566ecc00e5c21622f0822c7e9d38f861"></script>
+<script src="js/main.js?v=b2a238608d8461f133b5220ef7926a1f"></script>
