--- a/destiny4.0/one/ilimitada-avanzada-600/index.html
+++ b/destiny4.0/one/ilimitada-avanzada-600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=0e4aeb2eb8403b6cb8008dd121682b2a" rel="stylesheet">
-<link href="css/styles.css?v=063f67f43e9b9dc4ca6d8d168decc1dc" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=509268cf9137b382195f3bbe92231a99" rel="stylesheet">
+<link href="css/styles.css?v=9fd361f397d249f3004d40bf5fbe818d" rel="stylesheet" data-ws10-microcss="">
 <script>
 
 utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra", "promotion_price_name": "promo 50% one Ilimitada avanzada 600Mbps", "promotion_gift_name": "", "product_id": "168446377", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "promotion_variant": "datos ilimitados", "promotion_price_name": "2 x 1 ilimitada esencial gratis", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 600mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra","promotion_price_name": "promo 50% one Ilimitada avanzada 600Mbps","promotion_gift_name": "","product_id": "168446377","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": ""}]}]
@@ -22,7 +22,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 6
           <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">
             Vodafone One ilimitada Plus 300Mbps
           </h2>
-          <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" style="top: 40px;" data-js-vf="_ticket">
+          <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet ws10-u--mt8x@desktop" data-js-vf="_ticket">
               <div class="vf-ticket__floating">
                   <section class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow" data-ws10-js="card-rate">
                       <div class="ws10-c-card-rate__w-rates">
@@ -358,19 +358,19 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 6
                           <picture>
                               <source class="" srcset="img/section-tv/hbo-logo.webp?v=7b670ec981d57849c10e55c40908633e" type="image/webp">
                               <source class="" srcset="img/section-tv/hbo-logo.png?v=f71aa5a9223a165813a95d53a182cda5" type="image/png">
-                              <img class="" src="img/section-tv/hbo-logo.png?v=f71aa5a9223a165813a95d53a182cda5" alt="logo HBO">
+                              <img class="ws10-c-logo-list__logo" src="img/section-tv/hbo-logo.png?v=f71aa5a9223a165813a95d53a182cda5" alt="logo HBO">
                           </picture>        </li>
                         <li class="ws10-c-logo-list__item">
                           <picture>
                               <source class="" srcset="img/section-tv/foxnow.webp?v=bde5a796b0064510d6d21b56b3047734" type="image/webp">
                               <source class="" srcset="img/section-tv/foxnow.png?v=618301910264e1269f3da255fcdf1891" type="image/png">
-                              <img class="" src="img/section-tv/foxnow.png?v=618301910264e1269f3da255fcdf1891" alt="logo foxnow">
+                              <img class="ws10-c-logo-list__logo" src="img/section-tv/foxnow.png?v=618301910264e1269f3da255fcdf1891" alt="logo foxnow">
                           </picture>        </li>
                         <li class="ws10-c-logo-list__item">
                           <picture>
                               <source class="" srcset="img/section-tv/axnnow.webp?v=99bd45c4f2ffbc82c740a7ef8eb0e196" type="image/webp">
                               <source class="" srcset="img/section-tv/axnnow.png?v=aa027fa1436da9f5614b04e0ab240c3c" type="image/png">
-                              <img class="" src="img/section-tv/axnnow.png?v=aa027fa1436da9f5614b04e0ab240c3c" alt="logo TCM">
+                              <img class="ws10-c-logo-list__logo" src="img/section-tv/axnnow.png?v=aa027fa1436da9f5614b04e0ab240c3c" alt="logo TCM">
                           </picture>        </li>
                       </ul>
                     <p class="ws10-c-logo-list__w-show-all">
@@ -1013,4 +1013,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 6
 </div>
 
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=3d7cccdf76d21b57d52c80568f176894"></script>
+<script src="js/main.js?v=06b9fced230abfa5c406e51dd07726b0"></script>
