--- a/destiny4.0/one/ilimitada-plus-600/index.html
+++ b/destiny4.0/one/ilimitada-plus-600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=314cc89d36e4433835b3168ef9219a8a" rel="stylesheet">
-<link href="css/styles.css?v=c6af6707385da5ee144b447bcf3c225b" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=46786e36dbf281db1a10461ab59cf1eb" rel="stylesheet">
+<link href="css/styles.css?v=fc5b655be1fd6f8c51600047d6701100" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="ilimitada" style="visibility: hidden;opacity: 0">
 <script>
 
@@ -22,7 +22,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
           <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">
             Vodafone One ilimitada Plus x2 600Mbps
           </h2>
-          <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" style="top: 40px;" data-js-vf="_ticket">
+          <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet ws10-u--mt8x@desktop" data-js-vf="_ticket">
               <div class="vf-ticket__floating">
                   <section class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow" data-ws10-js="card-rate">
                       <div class="ws10-c-card-rate__w-rates">
@@ -300,75 +300,75 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                     <ul class="ws10-c-carousel-cover__list">
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/01.webp?v=0c2924571517ec3eb54037b890840b67" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/01.jpg?v=e0902eca7cc1ed5fdee6803dc107ec24" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/01.jpg?v=e0902eca7cc1ed5fdee6803dc107ec24" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/01.webp?v=810c6769dc3ca8ff67e4224c03b2f5d7" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/01.jpg?v=57365f3e86a15d11e71d55f5f7c2672b" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/01.jpg?v=57365f3e86a15d11e71d55f5f7c2672b" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/02.webp?v=79527d26d8181ce0b781688c1490628f" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/02.jpg?v=1ff0f55f2edd45147710ee41107888a7" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/02.jpg?v=1ff0f55f2edd45147710ee41107888a7" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/02.webp?v=ee8fe39d3c15e2e495bc6526a1ad259d" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/02.jpg?v=1fe2ee18fb2e989139ee91eb5c084d9a" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/02.jpg?v=1fe2ee18fb2e989139ee91eb5c084d9a" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/03.webp?v=371b44cd9739c073b17bebe4df73c4a9" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/03.jpg?v=4b7f0bc81866b7c4c6a9a79cdd01645e" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/03.jpg?v=4b7f0bc81866b7c4c6a9a79cdd01645e" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/03.webp?v=82c622e1aec29f8db8a92fc33e0785f0" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/03.jpg?v=3f93a4d95ce5c80cfa6a4659cd658313" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/03.jpg?v=3f93a4d95ce5c80cfa6a4659cd658313" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/04.webp?v=6ba21a33580c9f7030b549c9bc8eb041" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/04.jpg?v=a045b20cddf542f0fcbc4717b42da83c" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/04.jpg?v=a045b20cddf542f0fcbc4717b42da83c" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/04.webp?v=122cd2b81f64b7264c8d396d81559f2a" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/04.jpg?v=f10f9ea71f5146f7896b3f7e44ad7beb" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/04.jpg?v=f10f9ea71f5146f7896b3f7e44ad7beb" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/05.webp?v=73dc7214651e26c82cdadb424272f687" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/05.jpg?v=a58ec46f9d83d01a75a0a790cda6f7d4" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/05.jpg?v=a58ec46f9d83d01a75a0a790cda6f7d4" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/05.webp?v=b92bc9ba6333c7ae149b8c07db5e081d" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/05.jpg?v=f92eac2b9656e2ec4b0efc7556dc0499" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/05.jpg?v=f92eac2b9656e2ec4b0efc7556dc0499" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/06.webp?v=126cc3d9910566871366648fe1a2c9b7" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/06.jpg?v=6164ec95eff576d994329787c320a17a" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/06.jpg?v=6164ec95eff576d994329787c320a17a" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/06.webp?v=6d00d0af6eea4bc271d87d8834785917" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/06.jpg?v=7bf2a2f091af09430749e8509ebbcd9e" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/06.jpg?v=7bf2a2f091af09430749e8509ebbcd9e" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/07.webp?v=923fecf578a2dac3aa534d12640f0575" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/07.jpg?v=5a946cca86c7cfc28bede455277358c4" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/07.jpg?v=5a946cca86c7cfc28bede455277358c4" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/07.webp?v=a3e9e21e3e57bcd46ac2d85d27ab81b7" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/07.jpg?v=b63327f556e652647683f69656742961" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/07.jpg?v=b63327f556e652647683f69656742961" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/08.webp?v=b5ccc64e9f32f9e7015fc073ef769ceb" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/08.jpg?v=e16658cd82ed1469165dcbe996d733ca" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/08.jpg?v=e16658cd82ed1469165dcbe996d733ca" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/08.webp?v=d16f736c4653df2edeca140a2c0cdc6c" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/08.jpg?v=a41c5b3992dd0ee3c960c4728a4ed6a2" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/08.jpg?v=a41c5b3992dd0ee3c960c4728a4ed6a2" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/09.webp?v=c25c1c7049160314f3c3977f7c323bb9" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/09.jpg?v=0305d2614b2388500c78a6f69e987a94" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/09.jpg?v=0305d2614b2388500c78a6f69e987a94" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/09.webp?v=c5a20a521fd6f53f777c2de4dccea7de" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/09.jpg?v=399492e925f23e6749e4f6ed0e271f27" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/09.jpg?v=399492e925f23e6749e4f6ed0e271f27" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/10.webp?v=ccb9cac03e257684185fdf0727743f81" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/10.jpg?v=8e7942e281e10bfde999b866867e2dfd" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/10.jpg?v=8e7942e281e10bfde999b866867e2dfd" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/10.webp?v=a81aee62e38734977364de26e928d726" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/10.jpg?v=b0d14b275b8f57ffa5c69523046a652b" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/10.jpg?v=b0d14b275b8f57ffa5c69523046a652b" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/11.webp?v=288d332647de6a4191e565d80e78115a" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/11.jpg?v=fbb4d6a285a34e11396d40cabd5f2e4d" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/11.jpg?v=fbb4d6a285a34e11396d40cabd5f2e4d" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/11.webp?v=63aa8c1b33dabb71dc62cc30d965d9df" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/11.jpg?v=2918a9f99c93a44510c6e654a77f5c23" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/11.jpg?v=2918a9f99c93a44510c6e654a77f5c23" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                       <li class="ws10-c-carousel-cover__item js-carousel-cover-item">
                           <picture>
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/12.webp?v=4912d4e57675dc77030bfa9c2615c616" type="image/webp">
-                              <source class="ws10-u--pr1x" srcset="img/section-tv/12.jpg?v=0f3e65bad434ec4577446580080ca6d7" type="image/jpg">
-                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/12.jpg?v=0f3e65bad434ec4577446580080ca6d7" alt="Portada de serie incluida en el pack Seriefans">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/12.webp?v=9a2295a395f16c3636447dc17978bb62" type="image/webp">
+                              <source class="ws10-u--pr1x" srcset="img/section-tv/12.jpg?v=b5f1e6f0bce56e12ba6d1139638423c1" type="image/jpg">
+                              <img class="ws10-c-carousel-cover__img" src="img/section-tv/12.jpg?v=b5f1e6f0bce56e12ba6d1139638423c1" alt="Portada de serie incluida en el pack Seriefans">
                           </picture>      </li>
                     </ul>
                   </div>
@@ -382,19 +382,19 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                           <picture>
                               <source class="" srcset="img/section-tv/hbo-logo.webp?v=7b670ec981d57849c10e55c40908633e" type="image/webp">
                               <source class="" srcset="img/section-tv/hbo-logo.png?v=f71aa5a9223a165813a95d53a182cda5" type="image/png">
-                              <img class="" src="img/section-tv/hbo-logo.png?v=f71aa5a9223a165813a95d53a182cda5" alt="logo HBO">
+                              <img class="ws10-c-logo-list__logo" src="img/section-tv/hbo-logo.png?v=f71aa5a9223a165813a95d53a182cda5" alt="logo HBO">
                           </picture>        </li>
                         <li class="ws10-c-logo-list__item">
                           <picture>
                               <source class="" srcset="img/section-tv/amazon.webp?v=3f9039fd527796e207c4549ceb677efb" type="image/webp">
                               <source class="" srcset="img/section-tv/amazon.png?v=1b613aedf42202c6b54342e677ab9f17" type="image/png">
-                              <img class="" src="img/section-tv/amazon.png?v=1b613aedf42202c6b54342e677ab9f17" alt="logo amazon">
+                              <img class="ws10-c-logo-list__logo" src="img/section-tv/amazon.png?v=1b613aedf42202c6b54342e677ab9f17" alt="logo amazon">
                           </picture>        </li>
                         <li class="ws10-c-logo-list__item">
                           <picture>
                               <source class="" srcset="img/section-tv/foxnow.webp?v=bde5a796b0064510d6d21b56b3047734" type="image/webp">
                               <source class="" srcset="img/section-tv/foxnow.png?v=618301910264e1269f3da255fcdf1891" type="image/png">
-                              <img class="" src="img/section-tv/foxnow.png?v=618301910264e1269f3da255fcdf1891" alt="logo foxnow">
+                              <img class="ws10-c-logo-list__logo" src="img/section-tv/foxnow.png?v=618301910264e1269f3da255fcdf1891" alt="logo foxnow">
                           </picture>        </li>
                       </ul>
                     <p class="ws10-c-logo-list__w-show-all">
@@ -1251,4 +1251,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
 </div>
 
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=19864d1ceb18e2e0cbda2030dbff8785"></script>
+<script src="js/main.js?v=aa303c3b2355e7dc6686e74b050a95d1"></script>
