--- a/jumanji/ilimitada-avanza-plus-300/index.html
+++ b/jumanji/ilimitada-avanza-plus-300/index.html
@@ -1028,13 +1028,13 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mb
                   </p>
                   <p>Impuestos y cuota de línea incluidos.</p>
                   <p><strong>Permanencia 1 año</strong></p>
-                  <p>¿Cuánto voy a pagar?</p>
+                  <p class="ws10-u--mb1x">¿Cuánto voy a pagar?</p>
                   <p><strong>Fibra + Móvil (61,49€/mes) + decodificador (3€/mes): 64,49€/mes durante 1 año, después 100,49€/mes.</strong></p>
                   <p class="ws10-flex ws10-flex__direction--column">
                     <span>Promociones:</span>
                     <span data-js-vf="_portability">Línea adicional: GRATIS durante 1 año,
                       después con un 50% dto. por solo 17,50€/mes (dto. ya aplicado).</span>
-                    <span>Paquete de TV: GRATIS</span>
+                    <span>Paquete de TV: GRATIS durante 1 año, después 10€/mes</span>
                   </p>
                 
                   <!----PRICE-TAB-->
