Colectivos fixes analítica

--- a/destiny4.0/one/ilimitada-avanzada-600/index.html
+++ b/destiny4.0/one/ilimitada-avanzada-600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=0e6a3e04e95a284e4c97d9df035a4b11" rel="stylesheet">
-<link href="css/styles.css?v=3b711481f07e52e854fe2de6ea211533" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=c107873572aed27dd9319fb422df0369" rel="stylesheet">
+<link href="css/styles.css?v=0316800ce8057b1749cecbcc19ffc3cc" rel="stylesheet" data-ws10-microcss="">
 <script>
 
 utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "promo 50% one Ilimitada plus 300mbps", "promotion_gift_name": "", "product_id": "168446420", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "promotion_price_name": "datos ilimitados", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack seriefans", "product_category": "tv", "promotion_price_name": "seriefans incluido en ilimitada plus y one ilimitada plus", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada plus 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "promo 50% one Ilimitada plus 300mbps","promotion_gift_name": "","product_id": "168446420","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack seriefans","product_category": "tv","promotion_price_name": "seriefans incluido en ilimitada plus y one ilimitada plus","promotion_gift_name": "","product_id": ""}]}]
@@ -971,7 +971,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mb
           <div class="ws10-c-card-rate-sticky__offer ws10-flex ws10-flex__direction--column">
             <del class="ws10-c-card-rate-sticky__dto-price"><del>69,99</del>€/mes</del>
             <span class="ws10-c-card-rate-sticky__final-price">
-              <span class="ws10-c-card-rate-sticky__final-price-value">34,99€€</span>
+              <span class="ws10-c-card-rate-sticky__final-price-value">34,99€</span>
               <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
             </span>
           </div>
@@ -1119,4 +1119,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mb
 </div>
 
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=5cad7f7e7035571239208d5905714258"></script>
+<script src="js/main.js?v=2d2e3cebf9b52b8d72e72b45e1eecc64"></script>
