--- a/jumanji/ilimitada-avanzada-300/index.html
+++ b/jumanji/ilimitada-avanzada-300/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=4f25c40dcd25d77ea73234f68d4a0509" rel="stylesheet">
-<link href="css/styles.css?v=f2278c15f82bc7d66f7a4c4ba95055e1" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=72d97faec34232c04d4d8a570b8752ba" rel="stylesheet">
+<link href="css/styles.css?v=e2546de8f9721b94cbd5353b4680cf24" rel="stylesheet" data-ws10-microcss="">
 <script>
 utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "promo jumanji_one avanzada 300mb", "promotion_gift_name": "decodificador", "product_id": "168446368", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "promotion_price_name": "datos ilimitados", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "promo jumanji_one avanzada 300mb","promotion_gift_name": "decodificador","product_id": "168446368","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": ""}]}];
 </script>
@@ -11,7 +11,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
         <div class="ws10-o-layout">
           <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
             <span class="ws10-u-heading--4">Fibra + Móvil <strong>30% dto. 1 año</strong></span>
-            <h2 class="ws10-u-heading--2-lt ws10-u--pt5x ws10-u--3/4@desktop"><strong>Fibra +Optica, dos líneas de datos y TV para ser ilimitable</strong></h2>
+            <h2 class="ws10-u-heading--2-lt ws10-u--pt5x ws10-u--3/4@desktop"><strong>Fibra, dos líneas de datos y TV para ser ilimitable</strong></h2>
             <span class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center ws10-u--mt4x">
               <img class="ws10-u--pr1x" alt="icono Mejor Precio Vodafone" src="img/banner/icono-bestprice.svg?v=fd8cee3c145637698e01eca539954f3a">
               <span>Mejor Precio Vodafone</span>
@@ -1060,4 +1060,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
 </div>
 
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=98b9199546dbc0cd4481b79efab06cfa"></script>
+<script src="js/main.js?v=4266f7960d9080e9d395c7c667251b68"></script>
