Builds de Norte

--- a/destiny4.0/Norte/ilimitada_avanzada_300/index.html
+++ b/destiny4.0/Norte/ilimitada_avanzada_300/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=e1788717c92e3a7e1e4932b54b7f49d8" rel="stylesheet">
-<link href="css/styles.css?v=17c587987a18b2fd48016e1a35ba949e" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=c51ce7880767001f6018ce76cd275607" rel="stylesheet">
+<link href="css/styles.css?v=ae0f8674d407d57e4fb63ae48ba1f5bb" rel="stylesheet" data-ws10-microcss="">
 <script>
 utag_data.default_plan = "vodafone one ilimitada avanzada 300Mbps"
 utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "50% 6 meses norte one avanzada 300mb", "promotion_gift_name": "", "product_id": "168446368", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "promotion_price_name": "datos ilimitados", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":"268547964"}]},{"product_name": "vodafone one ilimitada avanzada 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "50% 6 meses norte one avanzada 300mb","promotion_gift_name": "","product_id": "168446368","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": "268547964"}]}];
@@ -508,7 +508,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
                                     <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 1€/mes.</p>
                                     </div>
                                 </div>
-                                </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                                </li>
+                             <li class="ws10-c-carousel__list-element js-carousel-list-element">
                                 <div class="ws10-c-card ws10-c-card--no-shadow">
                                     <div class="ws10-c-card-addons">
                                     <div class="ws10-c-card-addons__box">
@@ -519,7 +520,23 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
                                     <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono secundario y 1€/mes para Smart speaker con Alexa.</p>
                                     </div>
                                 </div>
-                                </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                                </li>
+                             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                                <div class="ws10-c-card ws10-c-card--no-shadow">
+                                    <div class="ws10-c-card-addons">
+                                    <div class="ws10-c-card-addons__box">
+                                        <svg class="ws10-u--pr1x" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48px" height="48px">
+                                            <title>Audible de Amazon</title>
+                                            <use xlink:href="#icon-accessories-mid"></use>
+                                        </svg>
+                                        <h3 class="ws10-c-card-addons__title"><strong>Audible de Amazon</strong></h3>
+                                    </div>
+                                    <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Disfruta de más de 90.000 audiolibros y podcast originales narrados por las mejores voces españolas para escuchar cuando y donde quieras, incluso sin conexión.</p>
+                                    <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 4 meses, después 9,99€/mes por suscripción (puedes tener tantas como líneas móviles ilimitadas dispongas).</p>
+                                    </div>
+                                </div>
+                                </li>
+                             <li class="ws10-c-carousel__list-element js-carousel-list-element">
                                 <div class="ws10-c-card ws10-c-card--no-shadow">
                                     <div class="ws10-c-card-addons">
                                     <div class="ws10-c-card-addons__box">
@@ -530,7 +547,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
                                     <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 5€/mes (IVA incluido).</p>
                                     </div>
                                 </div>
-                                </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                                </li>
+                             <li class="ws10-c-carousel__list-element js-carousel-list-element">
                                 <div class="ws10-c-card ws10-c-card--no-shadow">
                                     <div class="ws10-c-card-addons">
                                     <div class="ws10-c-card-addons__box">
@@ -541,7 +559,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
                                     <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 7,99€/mes.</p>
                                     </div>
                                 </div>
-                                </li>        </ul>
+                                </li>
+                        </ul>
                         <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*) Todos los servicios podrás gestionarlos en la app Mi Vodafone</span>
                     </div>
                 </section>                <!-- SIN SORPRESAS -->
@@ -1156,4 +1175,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=61d656d83d5a85aa1feda8e69befa104"></script>
+<script src="js/main.js?v=257dffed546baf62f8493bcd603db565"></script>
