--- a/destiny4.0/Norte/ilimitada_avanzada_600/index.html
+++ b/destiny4.0/Norte/ilimitada_avanzada_600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=33ef7ce0a45af569cf1d9f2fc8ddc3e5" rel="stylesheet">
-<link href="css/styles.css?v=32e18d9df3ddf76577a687fb152b87d7" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=b45b60f52fa8a67965967bcb281a6ce6" rel="stylesheet">
+<link href="css/styles.css?v=a7096972387d9be364370615100b7d36" rel="stylesheet" data-ws10-microcss="">
 <script>
 utag_data.default_plan = "vodafone one ilimitada plus 00Mbps"
 utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "50% 6 meses norte one plus 300mb", "promotion_gift_name": "", "product_id": "168446420", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "promotion_price_name": "datos ilimitados", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack seriefans", "product_category": "tv", "promotion_price_name": "seriefans incluido en ilimitada plus y one ilimitada plus", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada plus 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "50% 6 meses norte one plus 300mb","promotion_gift_name": "","product_id": "168446420","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack seriefans","product_category": "tv","promotion_price_name": "seriefans incluido en ilimitada plus y one ilimitada plus","promotion_gift_name": "","product_id": ""}]}];
@@ -575,7 +575,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mb
                             <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 1€/mes.</p>
                             </div>
                         </div>
-                        </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                        </li>
+                     <li class="ws10-c-carousel__list-element js-carousel-list-element">
                         <div class="ws10-c-card ws10-c-card--no-shadow">
                             <div class="ws10-c-card-addons">
                             <div class="ws10-c-card-addons__box">
@@ -586,7 +587,23 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mb
                             <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono secundario y 1€/mes para Smart speaker con Alexa.</p>
                             </div>
                         </div>
-                        </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                        </li>
+                     <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                        <div class="ws10-c-card ws10-c-card--no-shadow">
+                            <div class="ws10-c-card-addons">
+                            <div class="ws10-c-card-addons__box">
+                                <svg class="ws10-u--pr1x" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48px" height="48px">
+                                    <title>Audible de Amazon</title>
+                                    <use xlink:href="#icon-accessories-mid"></use>
+                                </svg>
+                                <h3 class="ws10-c-card-addons__title"><strong>Audible de Amazon</strong></h3>
+                            </div>
+                            <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Disfruta de más de 90.000 audiolibros y podcast originales narrados por las mejores voces españolas para escuchar cuando y donde quieras, incluso sin conexión.</p>
+                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 4 meses, después 9,99€/mes por suscripción (puedes tener tantas como líneas móviles ilimitadas dispongas).</p>
+                            </div>
+                        </div>
+                        </li>
+                     <li class="ws10-c-carousel__list-element js-carousel-list-element">
                         <div class="ws10-c-card ws10-c-card--no-shadow">
                             <div class="ws10-c-card-addons">
                             <div class="ws10-c-card-addons__box">
@@ -597,7 +614,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mb
                             <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 5€/mes (IVA incluido).</p>
                             </div>
                         </div>
-                        </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                        </li>
+                     <li class="ws10-c-carousel__list-element js-carousel-list-element">
                         <div class="ws10-c-card ws10-c-card--no-shadow">
                             <div class="ws10-c-card-addons">
                             <div class="ws10-c-card-addons__box">
@@ -608,7 +626,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mb
                             <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 7,99€/mes.</p>
                             </div>
                         </div>
-                        </li>        </ul>
+                        </li>
+                </ul>
                 <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*) Todos los servicios podrás gestionarlos en la app Mi Vodafone</span>
             </div>
         </section>        <!-- SIN SORPRESAS -->
@@ -1039,4 +1058,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mb
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=733dcf81009d38dbf267c42aa16e50fd"></script>
+<script src="js/main.js?v=6bb87c176ee61486fcfd606b768ba3cc"></script>
