--- a/destiny4.0/Norte/ilimitada_plus_600/index.html
+++ b/destiny4.0/Norte/ilimitada_plus_600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=cfa95f9e9989abde128714cfee28b7fc" rel="stylesheet">
-<link href="css/styles.css?v=cc8d2fe5f95feb3d9ae01cc62c10a915" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=332837e540a5506d02c2e71e392f2a98" rel="stylesheet">
+<link href="css/styles.css?v=e4f91d6c7e8b23eb15adbc978770a3e5" rel="stylesheet" data-ws10-microcss="">
 <script>
 utag_data.default_plan = "vodafone one ilimitada plus x2 600Mbps"
 utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra optica", "promotion_price_name": "50% 6 meses Norte Vodafone One ilimitada Plus x2 600Mbps", "promotion_gift_name": "", "product_id": "268548269", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "product_id": "" }], "product_packs_tv": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada plus x2 600mbps ilimitada total pack tv plus x2 series","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra optica","promotion_price_name": "50% 6 meses Norte Vodafone One ilimitada Plus x2 600Mbps","promotion_gift_name": "","product_id": "268548269","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "","product_category": "","promotion_price_name": "","promotion_gift_name": "","product_id": ""}]}];
@@ -382,9 +382,9 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 60
                         </li>
                         <li class="ws10-c-logo-list__item">
                           <picture>
-                              <source class="" srcset="img/section-tv/amazon.webp?v=d2acfb4f59e14f60701bc27f998e0524" type="image/webp">
-                              <source class="" srcset="img/section-tv/amazon.png?v=c5660d063047f76e8297174f0dfadc39" type="image/png">
-                              <img class="ws10-c-logo-list__logo" src="img/section-tv/amazon.png?v=c5660d063047f76e8297174f0dfadc39" alt="logo amazon">
+                              <source class="" srcset="img/section-tv/amazon-desktop.webp?v=6dce4e00407b42edd87c5c07d980a44a" type="image/webp">
+                              <source class="" srcset="img/section-tv/amazon-desktop.png?v=6cd4b0366a188aa11cafb64826c1da5f" type="image/png">
+                              <img class="ws10-c-logo-list__logo" src="img/section-tv/amazon-desktop.png?v=6cd4b0366a188aa11cafb64826c1da5f" alt="logo amazon">
                           </picture>
                         </li>
                         <li class="ws10-c-logo-list__item">
@@ -589,7 +589,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 60
                                     <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 1€/mes.</p>
                                     </div>
                                 </div>
-                                </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                                </li>
+                             <li class="ws10-c-carousel__list-element js-carousel-list-element">
                                 <div class="ws10-c-card ws10-c-card--no-shadow">
                                     <div class="ws10-c-card-addons">
                                     <div class="ws10-c-card-addons__box">
@@ -600,7 +601,23 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 60
                                     <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono secundario y 1€/mes para Smart speaker con Alexa.</p>
                                     </div>
                                 </div>
-                                </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                                </li>
+                             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                                <div class="ws10-c-card ws10-c-card--no-shadow">
+                                    <div class="ws10-c-card-addons">
+                                    <div class="ws10-c-card-addons__box">
+                                        <svg class="ws10-u--pr1x" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48px" height="48px">
+                                            <title>Audible de Amazon</title>
+                                            <use xlink:href="#icon-accessories-mid"></use>
+                                        </svg>
+                                        <h3 class="ws10-c-card-addons__title"><strong>Audible de Amazon</strong></h3>
+                                    </div>
+                                    <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Disfruta de más de 90.000 audiolibros y podcast originales narrados por las mejores voces españolas para escuchar cuando y donde quieras, incluso sin conexión.</p>
+                                    <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 4 meses, después 9,99€/mes por suscripción (puedes tener tantas como líneas móviles ilimitadas dispongas).</p>
+                                    </div>
+                                </div>
+                                </li>
+                             <li class="ws10-c-carousel__list-element js-carousel-list-element">
                                 <div class="ws10-c-card ws10-c-card--no-shadow">
                                     <div class="ws10-c-card-addons">
                                     <div class="ws10-c-card-addons__box">
@@ -611,7 +628,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 60
                                     <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 5€/mes (IVA incluido).</p>
                                     </div>
                                 </div>
-                                </li>             <li class="ws10-c-carousel__list-element js-carousel-list-element">
+                                </li>
+                             <li class="ws10-c-carousel__list-element js-carousel-list-element">
                                 <div class="ws10-c-card ws10-c-card--no-shadow">
                                     <div class="ws10-c-card-addons">
                                     <div class="ws10-c-card-addons__box">
@@ -622,7 +640,8 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 60
                                     <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 7,99€/mes.</p>
                                     </div>
                                 </div>
-                                </li>        </ul>
+                                </li>
+                        </ul>
                         <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*) Todos los servicios podrás gestionarlos en la app Mi Vodafone</span>
                     </div>
                 </section>                <!-- SIN SORPRESAS -->
@@ -1321,4 +1340,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 60
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=e9378a2b857c8f59978342b0a2c278d8"></script>
+<script src="js/main.js?v=36574e93217c69321f8186471feeed70"></script>
